[package]
name = "fr_core"
version = "0.1.0"
edition = "2021"

[features]
ui-gtk = ["ui_gtk", "fr_gtk"]
legacy3gtk14 = []

[dependencies]
context = { path = "../context" }
resources = { path = "../resources" }
gui_layer = { path = "../gui_layer" }
ui_gtk = { path = "../ui_gtk", optional = true }
fr_gtk = { path = "../fr_gtk", optional = true }
once_cell = "^1.17.1"
log = ">=0.4.11"
glob = ">=0.3.0"
regex = ">=1.7.1"
serde = ">=1.0.133"
serde_json = ">=1.0.81"
signal-hook = ">=0.3.15"
chrono = ">=0.4.24"
webbrowser = ">=0.7.1"
rust-i18n = "1.1.1"                                 # 1.1.4 seems to attract files from outside
fern = { version = ">=0.6", features = ["colored"] }
flume = { version = ">=0.10.14" }
lz4-compression = "^0.7.0"
rusqlite = { version = "=0.31.0" }                  # rusqlite-0.32.1  uses experimental "c literals" so we downgrade
feed-rs = "=1.5.3"                                  # TODO  V2.1.0 does not parse naturalnews pubDate
tl = ">=0.7.7"
opml = ">=1.1.5"
textcode = ">=0.2.2"
ico = ">=0.3.0"
png = ">=0.17.13"
gif = ">=0.12.0"
jpeg-decoder = { version = ">=0.3.0" }              # ">=0.2.0"
libwebp-image = "0.3.0"                             # conflict over package "image"
proc-status = ">=0.1.1"
fontdb = "=0.16.2"                                  # fixed for now, due to usvg version
base64 = "<=0.20.0"                                 #  0.21  wants code adaption on many places
itertools = ">=0.10.5"
bmp = ">=0.5.0"                                     # no more tinybmp, due to code size
tiny-skia = ">=0.11.4"

#  image V0.25.2 uses package rav1e, which uses bitstream-io-2.5.3     error: package `bitstream-io v2.5.3` cannot be built because it requires rustc 1.79 or newer, while the currently active rustc version is 1.75.0
image = { version = "=0.24.9" , features = ["bmp", "gif",  "ico", "jpeg", "png", "tiff", "webp" ] }
url = "=2.5.2"         # `icu_properties_data v2.0.1` cannot be built because it requires rustc 1.82 or newer, while the currently active rustc version is 1.75.0
bincode = "=1.3.3"
ureq = "2"                                    # uneven webpki versions.    Later: advance to Version 3
half = "=1.8.3"         # package `half v2.6.0` cannot be built because it requires rustc 1.81 or newer, while the currently active rustc version is 1.75.0
exr = "=1.5.0"        # downgrade due to launchpad rust version 1.75
resvg = "=0.42.0"     # resvg  error: package `image-webp v0.2.3` cannot be built because it requires rustc 1.80.1 or newer, while the currently active rustc version is 1.75.0
usvg = "=0.42.0"                                   #  "0.25"



[dev-dependencies]
rand = "0.8.5"
zip = "0.6.3"
fern = { version = ">=0.6", features = ["colored"] }
xmlparser = ">=0.13.5"

[package.metadata.i18n]
available-locales = ["en", "de"]
default-locale = "en"
