[package]
name = "resources"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.11"
rust-i18n = { version =  ">=1.0.1", path="../app-gtk3-debian/target/rust-i18n-1.1.1" }
#	once_cell = ">=1.12.0"	# downgrade for debian repo
once_cell = ">=1.9"


[package.metadata.i18n]
available-locales = ["en", "de"]
default-locale = "en"
