[package]
name = "testing"
version = "0.0.1"
edition = "2021"
description = "Feed Reader Testing Module"


[features]
ui-gtk = ["ui_gtk", "ddl"]

[dependencies]
resources = { path = "../resources" }
gui_layer = { path = "../gui_layer" }
context = { path = "../context" }
fr_gtk = { path = "../fr_gtk" }
fr_core = { path = "../fr_core" }
ui_gtk = { path = "../ui_gtk", optional = true }
ddl = { package = "dd-g3new", path = "../dd-g3new", optional = true }

log = "0.4.14"
chrono = "0.4.19"
http = "0.2.6"
# rust-ini = "0.17.0"
flume = ">=0.10.9"
serde = ">=1.0.133"
serde_json = ">=1.0.74"
fern = { version = "0.6", features = ["colored"] }
serde-xml-rs = ">=0.5.1"                           # later remove it
bincode = ">=1.3.3"
lz4-compression = "0.7.0"
base64 = "^0.13.0"
flate2 = ">=1.0.24"
rust-i18n = ">=1.0.1"
once_cell = ">=1.12.0"


[dev-dependencies]
rand = ">=0.8.5"
rusqlite = { version = ">=0.27.0", features = ["bundled"] }


[package.metadata.i18n]
available-locales = ["en", "de"]
default-locale = "en"


#  cargo watch -s "cargo run  --example regular --features ui-gtk   "
[[example]]
name = "regular"
path = "examples/regular.rs"
