[package]
name = "testing"
version = "0.0.1"
edition = "2021"
description = "Feed Reader Testing Module"


# [features]
# ui = ["fr_core"] ## this allows the mock ui for  the integration tests

[dependencies]
resources = { path = "../resources" }
gui_layer = { path = "../gui_layer" }
context = { path = "../context" }
fr_core = { path = "../fr_core",  features = ["ui-gtk"]  }
# fr_core = { path = "../fr_core", optional = true, features = ["ui-gtk"] }
#fr_gtk = { path = "../fr_gtk" } # , optional = true
#ui_gtk = { path = "../ui_gtk" } #  , optional = true

http = "0.2.6"
bincode = ">=1.3.3"
fern = { version = "*", features = ["colored"] } # 0.6
base64 = "<=0.13.0"
flume = "*"                                      # ">=0.10.9"
log = ">=0.4.11"
chrono = "*"                                     # "0.4.19"
serde = "*"                                      # ">=1.0.133"
serde_json = "*"                                 #  ">=1.0.74"
serde-xml-rs = "*"                               # ">=0.5.1"                           # later remove it
lz4-compression = "*"                            # "0.7.0"
rust-i18n = "1.1.1"	# 1.1.4 seems to attract files from outside
once_cell = ">=1.3.1"


[dev-dependencies]
flate2 = ">=1.0.24"
rand = ">=0.8.5"
rusqlite = { version = ">=0.22", features = ["bundled"] }
# fr_core = { path = "../fr_core", features = [] }


[package.metadata.i18n]
available-locales = ["en", "de"]
default-locale = "en"


#  cargo watch -s "cargo run  --example regular --features ui-gtk   "
[[example]]
name = "regular"
path = "examples/regular.rs"
