[package]
name = "ui_gtk"
version = "0.1.0"
edition = "2021"

##  app-g3sources  must be removed from both sections:  features  and dependencies
[features]
g3new = ["dd-g3new"]
g3sources = []       # "app-g3sources"


[dependencies]
gui_layer = { path = "../gui_layer" }
resources = { path = "../resources" }
#	gdk-sys = "^0.15.1"		# downgrade for debian repo
# gdk-sys = ">=0.14"
gdk-sys = "*"
# gtk = { version = "0.16.2", features = ["v3_24_30 "] }	#    2023-03 apply this, deprecate ubuntu20?
# gtk_m = { package="gtk" , optional = true , version = ">=0.15.5", features = [  "v3_22_30",] } 
gtk = "*"
###	log = "0.4.14"				# downgrade for debian repo
# log = ">=0.4.11"
log = "*"
# serde = ">=1.0.133"			# downgrade for debian repo
# serde = ">=1.0.130"
serde = "*"
base64 = "<=0.13.0" # later


## NEU:
dd-g3new = { path = "../dd-g3new", optional = true }

## ALT: 
# app-g3sources = { path = "../app-g3sources", optional = true }
# gio ="0.14.8"   ##  range must not be opened
